rmcd: cleanup a bit

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -3,9 +3,31 @@
   location should be $XDG_CONFIG_HOME/rmcd/rmcd.conf
 =cut
 
-# Where you want the files copied when using --copy
+=fifo
+  The named pipe (FIFO) used for interprocess communication
+=cut
+our $fifo    = "$ENV{HOME}/.mplayer/rmcd.fifo";
+
+=player
+  Player and options.
+  You probably want to leave -identify, -idle and -input file as it is.
+  You could setup mplayer to stream the content somewhere else, while
+  controlling it locally.
+=cut
+our $player  = 'mplayer';
+our @playopt = ('-cache', 200, '-quiet', '-identify',
+                '-idle',  '-input', "file=$fifo"
+              );
+
+=default_copy_dir
+  When using the -cp flag, this is where your files will end up.
+=cut
 our $dir_to_copy_to = "$ENV{HOME}";
 
+=personal_stations
+  Not happy with the included radio stations?
+  Just add your own.
+=cut
 our %personal_stations = (
   example   => {
     name  => 'Example FM',
