rmcd.conf: Added custom np example for use for local streaming (i.e mpd, since it only sends out ICY data

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -35,6 +35,26 @@ our %personal_stations = (
   },
 );
 
+=custom_np
+  If you are using MPD on another box and streaming the music to you, you will
+  not get all metadata available due to MPD only sending ICY INFO:
+
+  The War Report 2: Report The War - Capone-N-Noreaga - Hood Pride
+
+  You can ssh to the host and directly query MPD for the data, or make something
+  less ugly. :)
+=cut
+our $custom_np_command = undef;
+#our $custom_np =
+#  sub {
+#    my $host = '192.168.1.111';
+#    my $user = 'foo';
+#    my $port = 22;
+#
+#    exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -np'");
+#
+#};
+
 1;
 
 
