rmcd.conf: updated custom np example with oneline/full

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -47,13 +47,17 @@ our %personal_stations = (
 our $custom_np_command = undef;
 #our $custom_np =
 #  sub {
+#    my $oneline = shift; # short info on one line
 #    my $host = '192.168.1.111';
 #    my $user = 'foo';
 #    my $port = 22;
-#
-#    exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -np'");
-#
-#};
+#     if($oneline) {
+#       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -np'");
+#     }
+#     else {
+#       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -i'");
+#     }
+#   };
 
 1;
 
