rmcd.conf: fixed variable name

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -44,7 +44,7 @@ our %personal_stations = (
   You can ssh to the host and directly query MPD for the data, or make something
   less ugly. :)
 =cut
-our $custom_np_command = undef;
+our $custom_np = undef;
 #our $custom_np =
 #  sub {
 #    my $oneline = shift; # short info on one line
