rmcd.conf: fix formatting

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -15,9 +15,14 @@ our $fifo    = "$ENV{HOME}/.mplayer/rmcd.fifo";
   controlling it locally.
 =cut
 our $player  = 'mplayer';
-our @playopt = ('-cache', 200, '-quiet', '-identify',
-                '-idle',  '-input', "file=$fifo"
-              );
+our @playopt = (
+  '-cache', 2000,
+  '-min-cache', 200,
+  '-quiet',
+  'identify',
+  '-idle',
+  'input', "file=$fifo",
+);
 
 =default_copy_dir
   When using the -cp flag, this is where your files will end up.
