rmcd.conf: added note regarding default locations

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -1,6 +1,9 @@
 =rmcd
   rmcd config file
-  location should be $XDG_CONFIG_HOME/rmcd/rmcd.conf
+  location should be 
+    $XDG_CONFIG_HOME/rmcd/rmcd.conf
+  or
+    /etc/rmcd.conf
 =cut
 
 =fifo
