--- a/rmcd.conf
+++ b/rmcd.conf
@@ -1,22 +1,11 @@
-=rmcd
-  rmcd config file
-  location should be 
-    $XDG_CONFIG_HOME/rmcd/rmcd.conf
-  or
-    /etc/rmcd.conf
-=cut
+# rmcd configuration file
+# location: $XDG_CONFIG_HOME/rmcd/rmcd.conf OR /etc/rmcd.conf
 
-=fifo
-  The named pipe (FIFO) used for interprocess communication
-=cut
+# Used for the interprocess communication
+# Note that only one process at a time can use a pipe since it'll block
 our $fifo    = "$ENV{HOME}/.mplayer/rmcd.fifo";
 
-=player
-  Player and options.
-  You probably want to leave -identify, -idle and -input file as it is.
-  You could setup mplayer to stream the content somewhere else, while
-  controlling it locally.
-=cut
+# Player and options. You want to leave -identify -idle and -input file as is
 our $player  = 'mplayer';
 our @playopt = (
   '-cache', 2000,
@@ -27,47 +16,137 @@ our @playopt = (
   'input', "file=$fifo",
 );
 
-=default_copy_dir
-  When using the -cp flag, this is where your files will end up.
-=cut
+# When using the -cp flag, this is where your files will end up
 our $dir_to_copy_to = "$ENV{HOME}";
 
-=personal_stations
-  Not happy with the included radio stations?
-  Just add your own.
-=cut
-our %personal_stations = (
-  example   => {
-    name  => 'Example FM',
-    uri   => 'http://example.com',
+# Add your own channels
+# Do not forget to send the author the URLs :)
+our %channels = (
+  psy       => {
+    name => 'Digitally Imported - Psychedelic',
+    uri  => 'http://listen.di.fm/public3/goapsy.pls',
+  },
+  dnb       => {
+    name => 'Digitally Imported - Drum and Bass',
+    uri  => 'http://listen.di.fm/public3/drumandbass.pls',
+  },
+  hardcore  => {
+    name => 'Digitally Imported - Hardcore',
+    uri  => 'http://listen.di.fm/public3/hardcore.pls',
+  },
+  hardstyle => {
+    name => 'Digitally Imported - Hardstyle',
+    uri  => 'http://listen.di.fm/public3/hardstyle.pls',
+  },
+  gabber    => {
+    name => 'Digitally Imported - Gabber',
+    uri    => 'http://listen.di.fm/public3/gabber.pls',
+  },
+  psychill  => {
+    name => 'Digitally Imported - Psychill',
+    uri  => 'http://listen.di.fm/public3/psychill.pls',
+  },
+  dubstep   => {
+    name => 'Digitally Imported - Dubstep',
+    uri  => 'http://listen.di.fm/pulic3/dubstep.pls',
+  },
+  psy2       => {
+    name => 'Schizoid - Psychedelic',
+    uri  => 'http://schizoid.in/schizoid-psy.pls',
+  },
+  psy3       => {
+    name => 'Psyradio - Progressive',
+    uri  => 'http://streamer.psyradio.org:8010/listen.pls',
+  },
+  psy4       => {
+    name => 'Psyradio Full-On',
+    uri  => 'http://streamer.psyradio.org:8030/listen.pls',
+  },
+  psy5       => {
+    name => 'Chromomanova - Psychedelic',
+    uri  => 'http://85.25.86.69:8000/listen.pls',
+  },
+  kohina     => {
+    name => 'Kohina - Chiptunes',
+    uri  => 'http://www.kohina.com/kohinasolanum.m3u',
+  },
+  keygen     => {
+    name => 'Keygen.fm',
+    uri  => 'http://stream.keygen-fm.ru:8000/listen.pls',
+  },
+  sega       => {
+    name => 'Radio SEGA',
+    uri  => 'http://83.170.109.107:8000/listen.pls',
+  },
+  rainwave   => {
+    name => 'Rainwave - Videogame Music',
+    uri  => 'http://stream.gameowls.com:8000/rainwave.ogg',
+  },
+  gabber2    => {
+    name => 'Hardcast Gabber',
+    uri  =>'http://www.shoutcast.com/sbin/tunein-station.pls?id=1390',
+  },
+  gabber3    => {
+    name => 'Rotterdam Terror (192kbps)',
+    uri  => 'http://www.shoutcast.com/sbin/tunein-station.pls?id=784307',
+  },
+  moh  => {
+    name => 'Masters of Hardcore',
+    uri  => 'http://www.hardcoreradio.nl/hr.m3u',
+  },
+  hardstyle2 => {
+    name => 'Hard.fm Hardstyle (192kbps)',
+    uri  => 'http://files.hard.fm/192.pls',
+  },
+  hardstyle3 => {
+    name => 'Blackout Hardstyle (320kbps)',
+    uri  =>'http://yourno1hitradio.eu:8000/listen.pls',
+  },
+  '90'      => {
+    name => "Hits from the 90's",
+    uri  => 'http://www.shoutcast.com/sbin/tunein-station.pls?id=4384&t=.pls',
+  },
+  dnb2      => {
+    name => 'Drum and Bass Radio',
+    uri  => 'http://www.dnbradio.com/hi.m3u',
+  },
+  cvgm      => {
+    name => 'cvgm.net - Video Game and Demo Music',
+    uri  => 'http://de.cvgm.net/cvgm128.mp3',
   },
 );
 
-=custom_np
-  If you are using MPD on another box and streaming the music to you, you will
-  not get all metadata available due to MPD only sending ICY INFO:
 
-  The War Report 2: Report The War - Capone-N-Noreaga - Hood Pride
+# If you are using MPD on another box and streaming the music to you, you will
+# not get all metadata available due to MPD only sending ICY INFO:
+#
+# The War Report 2: Report The War - Capone-N-Noreaga - Hood Pride
+#
+# You can ssh to the host and directly query MPD for the data, or make something
+# less ugly. :)
+#
+# The only requirement is that your method shall return a coderef
 
-  You can ssh to the host and directly query MPD for the data, or make something
-  less ugly. :)
-=cut
 our $custom_np = undef;
-#our $custom_np =
-#  sub {
-#    my $oneline = shift; # short info on one line
-#    my $host = '192.168.1.111';
-#    my $user = 'foo';
-#    my $port = 22;
-#     if($oneline) {
-#       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -np'");
-#     }
-#     else {
-#       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -i'");
-#     }
-#   };
+
+=custom_np_example
+our $custom_np =
+  sub {
+    my $oneline = shift; # short info on one line
+    my $host = '192.168.1.111';
+    my $user = 'foo';
+    my $port = 22;
+     if($oneline) {
+       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -np'");
+     }
+     else {
+       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -i'");
+     }
+   };
+=cut
 
 1;
+
 
 
 # vim: set ts=2 ft=perl:
