--- a/rmcd.conf
+++ b/rmcd.conf
@@ -1,11 +1,35 @@
-# rmcd configuration file
-# location: $XDG_CONFIG_HOME/rmcd/rmcd.conf OR /etc/rmcd.conf
+=pod
 
-# Used for the interprocess communication
-# Note that only one process at a time can use a pipe since it'll block
+=head1 NAME
+
+  rmcd.conf - rmcd configuration file
+
+=head1 ENVIRONMENT
+
+  rmcd.conf should be placed in $XDG_CONFIG_HOME/rmcd/rmcd.conf OR
+  /etc/rmcd.conf
+
+  The FIFO is placed in $HOME/.mplayer/rmcd.fifo by default.
+
+  Note that only one process at a time can use the pipe since it'll block, so
+  dont use the same pipe as other mplayer instances.
+=cut
+
 our $fifo    = "$ENV{HOME}/.mplayer/rmcd.fifo";
 
-# Player and options. You want to leave -identify -idle and -input file as is
+=head1 OPTIONS
+
+=head2 Mplayer
+
+=head3 Default options passed to mplayer
+
+  -identify is needed for Mplayer::NowPlaying
+
+  -idle is needed for rmcd to keep waiting when the playlist is empty
+
+  -input file=$fifo is needed for the interprocess communication
+
+=cut
 our $player  = 'mplayer';
 our @playopt = (
   '-cache', 2000,
@@ -16,11 +40,49 @@ our @playopt = (
   'input', "file=$fifo",
 );
 
-# When using the -cp flag, this is where your files will end up
-our $dir_to_copy_to = "$ENV{HOME}";
+=head2 rmcd
 
-# Add your own channels
-# Do not forget to send the author the URLs :)
+=head3 rmcd.conf variables
+
+  $dir_to_copy_to - where files will end up after using the -cp flag
+  $custom_np      - a code reference that will be called upon if defined.
+
+=head4 Custom now playing function
+
+If you are streaming music from another box using MPD, you will not get all
+metadata since it only sends what is commonly known as ICY INFO. Therefore you
+might want to override the builtin now playing functionality in rmcd.
+
+=head4 Custom now playing code reference that uses PIMPD and SSH
+
+  our $custom_np =
+    sub {
+      my $oneline = shift; # show on one line if dummy args is provided
+      my $host    = '192.168.1.111';
+      my $user    = 'laleh';
+      my $port    = 22; # ssh port
+
+      if($oneline) {
+        exec("ssh $user\@$host -p $port '/usr/bin/pimpd -np'");
+      }
+      else {
+        exec("ssh $user\@$host -p $port '/usr/bin/pimpd -i'");
+      }
+    };
+
+=cut
+our $dir_to_copy_to = "$ENV{HOME}";
+our $custom_np = undef;
+
+=head1 RADIO
+
+=head2 Stations
+
+You can configure your own channels in the %channels hash. The syntax is
+
+L<short_channel_name> => { name => 'Fullname', uri => 'http://fulluri.m3u'}
+=cut
+
 our %channels = (
   psy       => {
     name => 'Digitally Imported - Psychedelic',
@@ -115,35 +177,6 @@ our %channels = (
     uri  => 'http://de.cvgm.net/cvgm128.mp3',
   },
 );
-
-
-# If you are using MPD on another box and streaming the music to you, you will
-# not get all metadata available due to MPD only sending ICY INFO:
-#
-# The War Report 2: Report The War - Capone-N-Noreaga - Hood Pride
-#
-# You can ssh to the host and directly query MPD for the data, or make something
-# less ugly. :)
-#
-# The only requirement is that your method shall return a coderef
-
-our $custom_np = undef;
-
-=custom_np_example
-our $custom_np =
-  sub {
-    my $oneline = shift; # short info on one line
-    my $host = '192.168.1.111';
-    my $user = 'foo';
-    my $port = 22;
-     if($oneline) {
-       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -np'");
-     }
-     else {
-       exec("ssh $user\@$host -p $port 'perl ~/devel/pimpd/pimpd -i'");
-     }
-   };
-=cut
 
 1;
 
