--- a/rmcd.conf
+++ b/rmcd.conf
@@ -46,14 +46,17 @@ our @playopt = (
 
   $dir_to_copy_to - where files will end up after using the -cp flag
   $custom_np      - a code reference that will be called upon if defined.
+  $custom_cp      - a code reference that will be executed if rmcd is called
+                    with the --ccp flag
 
-=head4 Custom now playing function
+
+=head2 Custom now playing function
 
 If you are streaming music from another box using MPD, you will not get all
 metadata since it only sends what is commonly known as ICY INFO. Therefore you
 might want to override the builtin now playing functionality in rmcd.
 
-=head4 Custom now playing code reference that uses PIMPD and SSH
+=head3 Custom now playing code reference that uses PIMPD and SSH
 
   our $custom_np =
     sub {
@@ -68,6 +71,32 @@ might want to override the builtin now playing functionality in rmcd.
       else {
         exec("ssh $user\@$host -p $port '/usr/bin/pimpd -i'");
       }
+    };
+
+=head2 Custom copying now playing track function
+
+If you are streaming music, the builtin copy function wont do much good.
+Therefore you might want to override it. This will be called upon when called
+with the --ccp flag.
+In the example we are using the Perl module Audio::MPD which provides a OOP 
+interface to the MPD API, but you could just use something along the lines of
+
+  chomp(my $file) = `mpc --format "%file%"|head -1`;
+
+to get the filename.
+
+=head3 Custom copying now playing track function that uses Audio::MPD and SSH
+
+  our $custom_cp = 
+    sub {
+      my $host = '192.168.1.111';
+      my $port = 22;
+      my $user = 'laleh';
+
+      my $base_dir   = '/mnt/Music_1'; # for MPD and alike
+      my $file = `ssh $user\@$host -p $port \"perl -MAudio::MPD -e 'print Audio::MPD->new->current->file'\"`;
+      my $fullpath = "'$base_dir/$file'";
+      exec("scp -P $port $user\@$host:$fullpath $dir_to_copy_to");
     };
 
 =cut
