rmcd.conf: fixed syntax error in example

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -81,13 +81,13 @@ with the --ccp flag.
 In the example we are using the Perl module Audio::MPD which provides a OOP 
 interface to the MPD API, but you could just use something along the lines of
 
-  chomp(my $file) = `mpc --format "%file%"|head -1`;
+  chomp(my $file = `mpc --format "%file%"|head -1`);
 
 to get the filename.
 
 =head3 Custom copying now playing track function that uses Audio::MPD and SSH
 
-  our $custom_cp = 
+  our $custom_cp =
     sub {
       my $host = '192.168.1.111';
       my $port = 22;
