rmcd: accidently noticed that most stuff still worked. Lots of code to be rewritten though

--- a/rmcd.conf
+++ b/rmcd.conf
@@ -2,34 +2,22 @@
 
 =head1 NAME
 
-  rmcd.conf - rmcd configuration file
+rmcd.conf - rmcd configuration file
 
 =head1 ENVIRONMENT
 
-  rmcd.conf should be placed in $XDG_CONFIG_HOME/rmcd/rmcd.conf OR
-  /etc/rmcd.conf
+rmcd.conf should be placed in $XDG_CONFIG_HOME/rmcd/rmcd.conf OR
+/etc/rmcd.conf
 
-  The FIFO is placed in $HOME/.mplayer/rmcd.fifo by default.
+The FIFO is placed in $HOME/.mplayer/rmcd.fifo by default.
 
-  Note that only one process at a time can use the pipe since it'll block, so
-  dont use the same pipe as other mplayer instances.
+Note that only one process at a time can use the pipe since it'll block, so
+dont use the same pipe as other mplayer instances.
+
 =cut
 
 our $fifo    = "$ENV{HOME}/.mplayer/rmcd.fifo";
 
-=head1 OPTIONS
-
-=head2 Mplayer
-
-=head3 Default options passed to mplayer
-
-  -identify is needed for Mplayer::NowPlaying
-
-  -idle is needed for rmcd to keep waiting when the playlist is empty
-
-  -input file=$fifo is needed for the interprocess communication
-
-=cut
 our $player  = 'mplayer';
 our @playopt = (
   '-cache', 2000,
@@ -40,70 +28,6 @@ our @playopt = (
   'input', "file=$fifo",
 );
 
-our $local_station = undef;
-
-=head2 rmcd
-
-=head3 rmcd.conf variables
-
-  $dir_to_copy_to - where files will end up after using the -cp flag
-  $custom_np      - a code reference that will be called upon if defined.
-  $custom_cp      - a code reference that will be executed if rmcd is called
-                    with the --ccp flag
-
-
-=head2 Custom now playing function
-
-If you are streaming music from another box using MPD, you will not get all
-metadata since it only sends what is commonly known as ICY INFO. Therefore you
-might want to override the builtin now playing functionality in rmcd.
-
-=head3 Custom now playing code reference that uses PIMPD and SSH
-
-  our $custom_np =
-    sub {
-      my $oneline = shift; # show on one line if dummy args is provided
-      my $host    = '192.168.1.111';
-      my $user    = 'laleh';
-      my $port    = 22; # ssh port
-
-      if($oneline) {
-        exec("ssh $user\@$host -p $port '/usr/bin/pimpd -np'");
-      }
-      else {
-        exec("ssh $user\@$host -p $port '/usr/bin/pimpd -i'");
-      }
-    };
-
-=head2 Custom copying now playing track function
-
-If you are streaming music, the builtin copy function wont do much good.
-Therefore you might want to override it. This will be called upon when called
-with the --ccp flag.
-In the example we are using the Perl module Audio::MPD which provides a OOP 
-interface to the MPD API, but you could just use something along the lines of
-
-  chomp(my $file = `mpc --format "%file%"|head -1`);
-
-to get the filename.
-
-=head3 Custom copying now playing track function that uses Audio::MPD and SSH
-
-  our $custom_cp =
-    sub {
-      my $host = '192.168.1.111';
-      my $port = 22;
-      my $user = 'laleh';
-
-      my $base_dir   = '/mnt/Music_1'; # for MPD and alike
-      my $file = `ssh $user\@$host -p $port \"perl -MAudio::MPD -e 'print Audio::MPD->new->current->file'\"`;
-      my $fullpath = "'$base_dir/$file'";
-      exec("scp -P $port $user\@$host:$fullpath $dir_to_copy_to");
-    };
-
-=cut
-our $dir_to_copy_to = "$ENV{HOME}";
-our $custom_np = undef;
 
 =head1 RADIO
 
@@ -211,6 +135,7 @@ our %channels = (
 
 1;
 
+__END__
 
 
 # vim: set ts=2 ft=perl:
